# unlearning_for_toxicity

./: README.md  pyproject.toml
requirements/: llm_unlearn.txt
unlearning_for_toxicity/evaluation/: evaluation.py  intel_lg_exp.ipynb  lg_exp.ipynb
unlearning_for_toxicity/experiments/: lg_exp.ipynb
unlearning_for_toxicity/jailbreak_prompts/: jailbreak_dataset_generation.py  prompt_generation.ipynb
unlearning_for_toxicity/jailbreak_prompts/data/: input_dataset_test.csv  input_dataset_train.csv
unlearning_for_toxicity/jailbreak_prompts/prompt_templates/: competing_objectives_1.txt  competing_ojectives_2.txt
unlearning_for_toxicity/jailbreak_prompts/toxic_prompts/: mismatched_genealization_reddit_1.txt  mismatched_generalization_reddit_2.txt
